@@ -61,6 +61,9 @@
     <ClCompile Include="..\..\src\microhttpd\tsearch.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\microhttpd\mhd_mono_clock.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\microhttpd\base64.h">
@@ -109,6 +112,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\microhttpd\mhd_byteorder.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\microhttpd\mhd_mono_clock.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
